Implemented remove last point